// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Card should support margin space props 1`] = `
.c2 > .c0 {
  padding: 24px;
  color: pink;
}

.c2 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

.c1 {
  margin: 4px;
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  border-radius: 8px;
  padding: 16px;
  box-shadow: 0 3px 6px 0 hsl(200,96%,35%);
}

.c1:hover {
  box-shadow: 0 4px 8px 0 hsl(200,96%,35%);
}

.c1 > .c0 {
  padding: 24px;
  color: pink;
}

.c1 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

<div>
  <div
    class="c0 c1"
  >
    Content
  </div>
</div>
`;

exports[`component: Card snapshot 1`] = `
.c1 {
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  border-radius: 8px;
  padding: 16px;
  box-shadow: 0 3px 6px 0 hsl(200,96%,35%);
}

.c1:hover {
  box-shadow: 0 4px 8px 0 hsl(200,96%,35%);
}

.c1 > .c0 {
  padding: 24px;
  color: pink;
}

.c1 > .c0 > .c0 {
  padding: 32px;
  color: blue;
}

<div>
  <div
    class="c0 c1"
  />
</div>
`;
